# replayt-lifecycle-webhooks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPENDENCY_AUDIT.md  DESIGN_PRINCIPLES.md  EVENTS.md  MISSION.md  OPERATOR_REVERSE_PROXY.md  REPLAYT_ECOSYSTEM_IDEA.md  SPEC_AUTOMATED_TESTS.md  SPEC_CLI_VERIFY_SAVED_WEBHOOK.md  SPEC_DELIVERY_IDEMPOTENCY.md  SPEC_EVENT_DIGEST.md  SPEC_HTTP_SERVER_ENTRYPOINT.md  SPEC_INTEGRATOR_ASGI_VERIFIED_FIRST.md  SPEC_LOCAL_WEBHOOK_DEMO.md  SPEC_METRICS_HOOKS.md  SPEC_MINIMAL_HTTP_HANDLER.md  SPEC_PIP_AUDIT_SUPPRESSION_ALIGNMENT.md  SPEC_PUBLIC_API.md  SPEC_README_OPERATOR_SECTIONS.md  SPEC_REFERENCE_DOCUMENTATION.md  SPEC_REFERENCE_HTTP_SERVER_ROUTE_MAP.md  SPEC_REPLAYT_BOUNDARY_TESTS.md  SPEC_REPLAYT_DEPENDENCY.md  SPEC_REPLAY_PROTECTION.md  SPEC_REVERSE_PROXY_REFERENCE_SERVER.md  SPEC_SECURITY_DISCLOSURE.md  SPEC_SQLITE_IDEMPOTENCY_STORE.md  SPEC_STRUCTURED_LOGGING_REDACTION.md  SPEC_WEBHOOK_FAILURE_RESPONSES.md  SPEC_WEBHOOK_SIGNATURE.md
docs/reference-documentation/: README.md  REPLAYT_WEBHOOK_SIGNING.md
docs/schemas/: lifecycle_webhook_payload-1-0.schema.json
scripts/: benchmark_verify_lifecycle_webhook_signature.py  pip_audit_suppression_alignment.py  sync_upstream_reference_docs.sh
src/replayt_lifecycle_webhooks/: __init__.py  __main__.py  demo_webhook.py  digest.py  events.py  handler.py  metrics.py  redaction.py  replay_protection.py  serve.py  signature.py  sqlite_idempotency.py
src/replayt_lifecycle_webhooks/fixtures/events/: run_completed.json  run_failed.json
tests/: conftest.py  test_ci_package_wiring.py  test_ci_ruff_wiring.py  test_cli_verify_saved_webhook.py  test_demo_webhook.py  test_event_digest.py  test_http_handler.py  test_lifecycle_events.py  test_metrics_hooks.py  test_mission_docs.py  test_operator_reverse_proxy_doc.py  test_packaging_layout.py  test_perf_verify_hotpath.py  test_pip_audit_suppression_alignment.py  test_pre_commit_ruff_mirror.py  test_property_fuzz_parse.py  test_property_fuzz_signature.py  test_public_api.py  test_readme_operator_sections.py  test_redaction.py  test_reference_documentation_workflow.py  test_reference_http_server_route_map_doc.py  test_reference_server.py  test_reference_server_subprocess.py  test_replay_protection.py  test_replayt_boundary.py  test_replayt_dependency.py  test_security_disclosure_doc.py  test_serve_handler_logging.py  test_smoke.py  test_spec_integrator_asgi_verified_first.py  test_sqlite_idempotency_store.py  test_webhook_failure_response_fixtures.py  test_webhook_signature.py
tests/fixtures/events/: approval_pending.json  approval_resolved.json  run_started_redelivery.json
tests/fixtures/webhook_failure_responses/: README.md  invalid_json.json  invalid_payload_shape.json  method_not_allowed.json  replay_rejected.json  signature_malformed.json  signature_mismatch.json  signature_required.json  unknown_event_type.json
