[project]
name = "replayt-lifecycle-webhooks"
version = "0.1.0"
description = "Signed HTTP webhooks for replayt run and approval lifecycle events: Python project using replayt; see docs for scope."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.0",
  "replayt>=0.4.25",
]

[project.urls]
Homepage = "https://github.com/flogat/replayt-lifecycle-webhooks"
Issues = "https://github.com/flogat/replayt-lifecycle-webhooks/issues"

[project.scripts]
# Secondary alias; primary operator command is `python -m replayt_lifecycle_webhooks` (README).
replayt-lifecycle-webhooks-serve = "replayt_lifecycle_webhooks.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "pip-audit>=2.7.0",
  "jsonschema>=4.18.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "replayt_boundary: import replayt and assert EVENTS.md-listed symbols (SPEC_REPLAYT_BOUNDARY_TESTS).",
]
