[project]
name = "replayt-lifecycle-webhooks"
version = "0.1.0"
description = "Signed HTTP webhooks for replayt run and approval lifecycle events: Python project using replayt; see docs for scope."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.0",
  "replayt>=0.4.25",
]

[project.urls]
Homepage = "https://github.com/flogat/replayt-lifecycle-webhooks"
Issues = "https://github.com/flogat/replayt-lifecycle-webhooks/issues"

[project.scripts]
# Secondary alias; primary operator command is `python -m replayt_lifecycle_webhooks` (README).
replayt-lifecycle-webhooks-serve = "replayt_lifecycle_webhooks.__main__:main"
replayt-lifecycle-webhooks-demo-post = "replayt_lifecycle_webhooks.demo_webhook:_cli_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "pip-audit>=2.7.0",
  "pyyaml>=6.0.1",
  "jsonschema>=4.18.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]
property = [
  "hypothesis>=6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"replayt_lifecycle_webhooks" = ["py.typed", "fixtures/events/*.json"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["scripts"]
markers = [
  "replayt_boundary: replayt import seam, required symbols, __all__ superset (SPEC_REPLAYT_BOUNDARY_TESTS R1, G1–G7).",
  "property_fuzz: optional Hypothesis fuzzing for verify/parse (SPEC_AUTOMATED_TESTS § Backlog dcffe5d5, PF1–PF10).",
]
